@@ -121,14 +121,11 @@ module StateMachine
         options = {}
       end
       
-      # The actual method to invoke must be defined
       raise ArgumentError, ':do callback must be specified' unless @method
       
-      # Add defaults
       options = {:bind_to_object => self.class.bind_to_object, :terminator => self.class.terminator}.merge(options)
       
-      # Proxy the method so that it's bound to the object.  Note that this only
-      # applies to lambda callbacks.  All other callbacks ignore this option.
+      # Proxy lambda blocks so that they're bound to the object
       @method = bound_method(@method) if options.delete(:bind_to_object) && @method.is_a?(Proc)
       @terminator = options.delete(:terminator)
       
